--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,17 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'me.olhovsky.notonthehighstreet.checkout.Application'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE // allow duplicates
+    archiveFileName = 'notonthehighstreet-checkout.jar'
+}
+
 dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
